# warrior4-vm

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  dev.md
.github/workflows/: build-disk-image.yml  patch-apk.yml  patch-tarball.yml
appliance/: packages.txt
appliance/script/: configure.sh  patch.sh
appliance/skeleton/etc/: inittab  issue  motd  resolv.conf  warrior4-appliance.toml  warrior4-env
appliance/skeleton/etc/conf.d/: consolefont  dnscrypt-proxy  zram-init
appliance/skeleton/etc/dnscrypt-proxy/: dnscrypt-proxy.toml
appliance/skeleton/etc/init.d/: warrior4-appliance  warrior4-appliance-display
appliance/skeleton/etc/logrotate.d/: warrior4-appliance
appliance/skeleton/etc/network/: interfaces
appliance/skeleton/etc/periodic/weekly/: fstrim.sh
appliance/skeleton/etc/udhcpc/: udhcpc.conf
appliance/skeleton/usr/lib/warrior4-appliance/: payload-create.sh  payload-post-start.sh  payload-poweroff-check.sh  payload-pre-start.sh  payload-reboot-check.sh  payload-wait-ready.sh  watchtower-create.sh  watchtower-run-once-create.sh
appliance/skeleton/usr/share/warrior4-network-check/: target.json
crates/warrior4-appliance/: Cargo.toml
crates/warrior4-appliance-display/: Cargo.toml
crates/warrior4-appliance-display/src/: api.rs  ipc.rs  lib.rs  main.rs
crates/warrior4-appliance/src/: config.rs  container.rs  ipc.rs  logging.rs  main.rs  manager.rs  net.rs  state.rs
crates/warrior4-network-check/: Cargo.toml
crates/warrior4-network-check/src/: adapter.rs  check.rs  config.rs  main.rs
script/: Dockerfile  apk.sh  build.sh  docker.py  etc.sh  package.py  package.sh  patch-tarball.sh
