[package]
name = "warrior4-appliance-display"
version = "0.0.0"
edition = "2021"
description = "Displays information on the Warrior virtual appliance's tty1"
publish = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
cursive = { version = "0.21.0", default-features = false, features = ["crossterm-backend"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
vt = "0.2.1"
