[package]
name = "warrior4-appliance"
version = "0.0.0"
edition = "2021"
description = "System management for the Warrior virtual appliance"
publish = false

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "blocking", "gzip"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
