[package]
name = "warrior4-network-check"
version = "0.0.0"
edition = "2024"
description = "Checks the network for any possible packet inspection interference"
publish = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dnsclient = "0.2.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = "3.0.12"
url = "2.5.4"
